add string diagram of met net

--- a/plos_template.tex
+++ b/plos_template.tex
@@ -125,6 +125,16 @@ Although the untyped lambda calculus and its associated category theoretic seman
 This circularity seems to suggest that in order to address the second question regarding minimal expressive power necessary to express functional closure it may be necessary to take into account expressions of functional closure that may be possible to construct in various extensions of the simply typed lambda calculus (some of these may be found on the seven additional vertices of Barendregt's lambda cube). We discuss these issues with respect to the goal of identifying a language of minimal expressive power capable of representing the functional closure property or relevant approximations thereof.
 
 % Results and Discussion can be combined.
+\section*{Metabolism-oriented abstraction of biological organization}
+\begin{figure}
+\begin{center}
+\noindent\includegraphics[width=0.9\columnwidth]{fig/blockdiagtop.pdf}
+%\noindent\includegraphics[width=0.24\columnwidth]{fig/mrcatprob.pdf}
+\end{center}
+\caption{An abstraction of metabolic networks that can be interpreted in terms of symmetric monoidal categories.}
+\label{fig:metabolicstringdiag}
+\end{figure}
+
 \section*{Functional closure in biological terms}
 \subsection*{Functional closure as an invariant property of evolvable systems}
 
