--- a/plos_template.tex
+++ b/plos_template.tex
@@ -118,9 +118,9 @@ The capacities have been demonstrated to chemically synthesize and transplant ge
 
 Very few biologists or other scientists dispute that evolution is the most fundamental organizing concept in biology. In this light, it seems somewhat surprising that not even more effort than has already been exerted is invested in clarifying and formalizing increasingly detailed conceptions of its origins and operation. In order to understand biological systems, it will be necessary to address the question: What are the necessary enabling conditions that make biological evolution possible? The synthesis of some potential answers to this question may clarify a path toward defining a sufficient collection of preconditions for evolutionary processes to take flight.
 
-Here we argue that one such necessary precondition for evolution, which has been identified before as a ``defining characteristic of life''\todo{cite Rosen's original work}, is what we refer to as \emph{functional closure}. In order to define this term and its context, we begin with a diagrammatic model of a prototypical biochemical reaction network that has been claimed to possess this property. We then ask: Is there a formal language capable of expressing this property? A brief detour is necessary to motivate this question. In computer science, there is a property of languages called \emph{expressive power} that is used both heuristically and formally to rank order models of computation, programming languages, and their associated logics with respect to one another and with respect to so-called \emph{natural language}. Roughly speaking, an increased level of expressive power of a language correlates with its ability to express more complex or sophisticated ideas. One might ask why it is not always desirable to work within the extant language containing the highest possible expressive power. One reason to consider less expressive languages at all is that important questions about them can be answered algorithmically with appropriate computer hardware and software in a practical amount of time and memory, whereas the same questions posed of languages with more expressive power are known not to be able to be answered by such means\todo{cite a review and/or text containing relevant results in computational complexity and computability theory}. Thus, identifying a minimal language capable of expressing the necessary conditions for the origin of evolutionary processes is directly germane to the continuing development of exquisitely detailed models of whole cells as they are refined, unfold and are embedded into equally detailed multi-level models of populations, communities, and ecosystems.
+Here we argue that one such necessary precondition for evolution, which has been identified before as a ``defining characteristic of life''\todo{cite Rosen's original work}, is what we refer to as \emph{functional closure}. In order to define this term and its context, we begin with a diagrammatic model of a prototypical biochemical reaction network that has been claimed to possess this property. We then ask: Is there a formal language capable of expressing this property? A brief detour is necessary to motivate this question. In computer science, there is a property of languages called \emph{expressive power} that is used both heuristically and formally to rank order models of computation, programming languages, and their associated logics with respect to one another and with respect to so-called \emph{natural language}. Roughly speaking, an increased level of expressive power of a language correlates with its ability to express more complex or sophisticated ideas. One might ask why it is not always desirable to work within the extant language containing the highest possible expressive power. One reason to consider less expressive languages at all is that important questions about them can be answered algorithmically with appropriate computer hardware and software in a practical amount of time and memory, whereas the same questions posed of languages with more expressive power are known not to be able to be answered by such means\todo{cite a review and/or text containing relevant results in computational complexity and computability theory}. Thus, identifying a \emph{minimal} language capable of expressing the necessary conditions for the origin of evolutionary processes is directly germane to the continuing development of exquisitely detailed models of whole cells as they are refined, unfold and are embedded into equally detailed multi-level models of populations, communities, and ecosystems.
 
-In this light, we can refine the question, "Is there a formal language capable of expressing the functional closure property?" by adjoining the follow-up question, "If so, among those that are, which is the language of minimal expressive power?" We begin to address the first question taking an historically motivated approach \todo{cite Rosen's original work and perhaps Letelier et al, 2006} by attempting to interpret this diagram in terms of an abstract algebraic language (category theory). Unfortunately, the prototypical diagram violates a fundamental assumption of this language precisely because the diagram expresses the functional closure property. This diagram, and indeed the functional closure property in general, can be interpreted in terms of a standard model of computation called (untyped or type-free) lambda calculus. Via this conceptual route, we find that the interpretation of functional closure in terms of category theory can be recovered, albeit it in a form that looks quite different, via one typical category theoretic semantics for the untyped lambda calculus.
+In this light, we can refine the question, "Is there a formal language capable of expressing the functional closure property?" by adjoining the follow-up question, "If so, among those that are, which is the language of minimal expressive power?" We begin to address the first question taking an historically motivated approach \todo{cite Rosen's original work and perhaps Letelier et al, 2006} by attempting to interpret the aforementioned diagram expressing functional closure in terms of an abstract algebraic language (category theory). Unfortunately, the prototypical diagram violates a fundamental assumption of this language precisely because the diagram expresses the functional closure property. This diagram, and indeed the functional closure property in general, can be interpreted in terms of a standard model of computation called (untyped or type-free) lambda calculus. Via this conceptual route, we find that the interpretation of functional closure in terms of category theory can be recovered, albeit it in a form that looks quite different, via one typical category theoretic semantics for the untyped lambda calculus.
 
 Although the untyped lambda calculus and its associated category theoretic semantics are capable of expressing the functional closure property, this method has at least two problems. One is that the untyped lambda calculus is a relatively highly expressive language capable of implementing general recursion. The second is that the untyped lambda calculus is capable of expressing functional closure in a trivial way via something as simple as an identity function. A simple solution might seem to pass to the simply typed lambda calculus, of which the untyped lambda calculus has been argued to be a special case. However, as a result of the analogous category theoretic semantics for the simply typed lambda calculus, doing so brings us back to the original category theoretic interpretation of the diagram expressing the functional closure property that we demonstrated to be in type-theoretic error.
 
@@ -153,10 +153,47 @@ Robert Rosen suggested a formalism for metabolic networks that does attempt to a
 
 In the context of a network of biochemical reactions, the heuristic distinction between metabolic substrates and enzymes is made on the basis of knowledge about the input and output of any given biochemical reaction. Those inputs that emerge from a biochemical reaction with relatively little to no change in their structure are considered to be enzymes and those whose structure is altered are considered to be substrates whose altered forms are referred to as products. 
 
-A situation analogous to the enzyme-substrate-product abstraction\todo{this terminology is used if nowhere else in the main BioPAX publication} is formalized in a fundamental manner in type theory, category theory and the relationship between them. This distinction was originally formalized in Russell and Whitehead's type theory as a means of circumventing the self-referential Russell's (also known as Barber's) paradox of set theory in which one can not determine internal to the language of set theory whether a set of all sets that contain themselves contains itself or not\todo{cite Russell and Whitehead or perhaps a more modern source like John L Bell's Types, Sets and Categories}. In type theory a hierarchy is introduced that is analogous to the distinction fundamental to the definition of a category in category theory between objects (which are like substrates and products in terms of metabolic networks) and morphisms (which play the role of enzymes).
+A situation analogous to the enzyme-substrate-product abstraction \todo{this terminology is used if nowhere else in the main BioPAX publication} is formalized in a fundamental manner in type theory, category theory and the relationship between them. That a distinction between object and morphism was perhaps conceptually fruitful was originally suggested in Russell and Whitehead's type theory as a means of circumventing the self-referential Russell's (also known as Barber's) paradox of set theory in which one can not determine internal to the language of set theory whether a set of all sets that contain themselves contains itself or not\todo{cite Russell and Whitehead or perhaps a more modern source like John L Bell's Types, Sets and Categories}. In type theory a hierarchy is introduced that is analogous to the distinction fundamental to the definition of a category in category theory (see Materials and Methods) between objects (which are like substrates and products in terms of metabolic networks) and morphisms (which play the role of enzymes). In category theory, this distinction propagates up a hierarchy of higher-order functions where if we are in a category having a terminal, $1$, and exponential objects and we consider two objects $A$ and $B$ and morphisms between them, the collection of which is represented internal to a given category as a so-called exponential object $B^A$ or externally as $Hom(A,B)$ one of which might be $f \colon A \rightarrow B$ then the respective generalized elements of $A$, $B$ and $B^A$ are essentially of different types. From this perspective, while it is possible to \emph{evaluate} an element $f:B^A$ read ``a generalized element $f$ of type $B^A$ given by $f \colon 1 \rightarrow B^A$'' at a generalized element $a:A$ given by $a \colon 1 \rightarrow A$ to arrive at some generalized element $b:B$ given by $b \colon 1 \rightarrow B$ it is not possible to likewise \emph{evaluate} an element $a:A$ at another element $a':A$ as this kind of statement is simply not able to be expressed within the confines of the language. If it were possible to do such a thing in some more expressive meta-language of which category theory only represents a fragment, then we can imagine that while reasoning within the language of category theory itself we have restricted ourselves to a mental state in which we are completely unaware and unable to become aware of this capacity.
 
+The enzyme-substrate-product abstraction can be interpreted in terms of symmetric monoidal categories and depicted using corresponding string diagrams. Any metabolic reaction such as one of the first steps in the tricarboxylic acid cycle depicted in Figure \ref{fig:ctacyc} can be viewed as a morphism acting on tensored objects. The way this metaphor is constructed is to associate to a biochemical reaction such as 
+$$
+\text{Oxaloacetate } + \text{Acetyl CoA} + H_2O \xrightarrow[]{\text{Citrate synthase}} \text{Citrate} + \text{CoA-SH},
+$$
+abstract labels
+$$
+s_1 + s_2 + s_3 \xrightarrow[]{m_1} p_1 + p_2.
+$$
+This can be done for any biochemical reaction and at any level of abstraction. For example we can do the same for the net reaction that occurs for each iteration of the TCA cycle as
+$$
+\text{Acetyl-CoA} + 3 \text{NAD}^+ + \text{Q} + \text{GDP} + P_i + 3 H_2O \xrightarrow[]{\text{TCA cycle}} \text{CoA-SH} + 3 \text{NADH} + 3H^+ + QH_2 + \text{GTP} + 2 CO_2,
+$$
+where we now have to abstract from a single enzyme to the composite action of all of the enzymes directly involved in the TCA cycle to which we give the name ``TCA cycle''. The abstract labels that may be associated with this biochemical transformation are
+$$
+s_1 + s_2 + s_2 + s_2 + s_3 + s_4 + s_5 + s_6 + s_6 + s_6 \xrightarrow[]{f} p_1 + p_2 + p_2 + p_2 + p_3 + p_3  + p_3 + p_4 + p_5 + p_6 + p_6. 
+$$
+The general promiscuity of metabolic interactions in which enzymes recognize a collection of, for the most part very closely, related substrates suggests the representation of these biochemical reactions as tensor products of objects in a category. The intuition behind doing so lies in the fact that if there is a general class of substrates that can substitute for a given one, then instead of specifying a particular one, $s_1$, we should specify an entire set of them $S_1$. Then if there is another set, $S_2$ of substrates that can take the place of $s_2$, and the substrates upon which an enzyme acts is defined on $S_1 \times S_2$, then that enzyme can be said to act on any pair $(s_1,s_2)$ of substrates where $s_1 \in S_1$ and $s_2 \in S_2$. This case of viewing $S_1$ and $S_2$ as sets may come to be seen as being too restrictive in which case we would be forced to consider the abstract tensor product of two objects in a category $S_1 \otimes S_2$, which could then be specialized to a different special case than that in which $S_1$ and $S_2$ are sets. For the simple example of the Citrate synthase catalyzed aldol condensation reaction described above, we arrive at a representation in terms of a morphism in a symmetric monoidal category
+\begin{eqnarray*}
+m_1 \colon S_1 \otimes S_2 \otimes S_3 &\longrightarrow& P_1 \otimes P_2\\
+(s_1,s_2,s_3) &\longmapsto& (p_1,p_2)
+\end{eqnarray*}
+The adjective ``symmetric'' is appended to monoidal category based upon the assumption that the order of combination of substrates and production of products is unimportant and thus the factors in said tensor products may be permuted. The prototype example of such a monoidal category is the category of sets with cartesian product, but the formalism is not limited to this particular representation. We will proceed thinking in terms of this particular case as a useful mental crutch for grounding intuitions, but its limitations with respect to the capacity to recognize the full generality of the formalism at hand can be severe. Indeed, we will be forced to highlight at least one case where such intuition fails in order to explain the functional closure concept.
 
-
+The metabolic network formalism interpreted in symmetric monoidal categories then applies to the case in which we string together metabolic processes. An example of this is presented in Figure \ref{fig:metabolicstringdiag}. In this diagram, we have the following morphisms:
+\begin{eqnarray*}
+m_1 \colon S_1 \otimes S_2 &\longrightarrow& P_1 \otimes I_1,\\
+m_2 \colon I_1 &\longrightarrow& P_2 \otimes I_2,\\
+m_3 \colon I_2 \otimes S_3 &\longrightarrow& P_3 \otimes P_4.
+\end{eqnarray*}
+These morphisms can be composed as 
+$$
+f \cong (m_1 \circ m_2) \circ m_3 \cong m_1 \circ (m_2 \circ m_3) \cong m_1 \circ m_2 \circ m_3,
+$$
+where further identifying $A \cong S_1 \otimes S_2 \otimes S_3$ and $B \cong P_1 \otimes P_2 \otimes P_3 \otimes P_4$ allows us to express any metabolic network represented in the form depicted in Figure \ref{fig:metabolicstringdiag} regardless of the more or less complicated nature of intermediate interactions concisely as
+$$
+\xymatrix@1{
+	A\ar[r]^-{f} & B.
+	}
+$$
 \begin{figure}
 \begin{center}
 \noindent\includegraphics[width=0.9\columnwidth]{fig/blockdiagtop.pdf}
@@ -165,10 +202,7 @@ A situation analogous to the enzyme-substrate-product abstraction\todo{this term
 \label{fig:metabolicstringdiag}
 \end{figure}
 
-\section*{Functional closure in biological terms}
-\subsection*{Functional closure as an invariant property of evolvable systems}
-
-\section*{Functional closure in abstract terms}
+\section*{Functional closure}
 \input{tex/funcloseinvar}
 
 \section*{Discussion}
@@ -177,14 +211,18 @@ A situation analogous to the enzyme-substrate-product abstraction\todo{this term
 % "Models" is not a valid title for PLoS ONE authors. However, PLoS ONE
 % authors may use "Analysis" 
 \section*{Materials and Methods}
-\subsection*{Categories\todo{so far, this section is lifted from planetmath.org. It should probably all be moved to the appendix.}}
-\input{tex/category.tex}
-
-\subsection*{Monoidal categories}
-\input{tex/monoidalcategory.tex}
-
-\subsection*{Symmetric monoidal categories}
-\input{tex/symmetricmonoidalcategory.tex}
+%\subsection*{Categories\todo{so far, this section is lifted from planetmath.org.}}
+%\input{tex/category.tex}
+%
+%\subsection*{Cartesian closed category}
+%\input{tex/cartesianclosedcat.tex}
+%\input{tex/functor.tex}
+%
+%\subsection*{Monoidal categories}
+%\input{tex/monoidalcategory.tex}
+%
+%\subsection*{Symmetric monoidal categories}
+%\input{tex/symmetricmonoidalcategory.tex}
 
 % Do NOT remove this, even if you are not including acknowledgments
 \section*{Acknowledgments}
