--- a/tex/category.tex
+++ b/tex/category.tex
@@ -24,3 +24,11 @@ Some examples of categories:
 \end{itemize}
 
 \textbf{Remark}.  If $\hom(A,B)$ in the second condition above is not required to be a set (but a class), we usually call $\mathcal{C}$ a \emph{large category}.
+
+An {\em initial object} in a category $\mathcal{C}$ is an object $A$ in $\mathcal{C}$ such that, for every object $X$ in $\mathcal{C}$, there is exactly one morphism $A \longrightarrow X$.
+
+A {\em terminal object} in a category $\mathcal{C}$ is an object $B$ in $\mathcal{C}$ such that, for every object $X$ in $\mathcal{C}$, there is exactly one morphism $X \longrightarrow B$.
+
+A {\em zero object} in a category $\mathcal{C}$ is an object $0$ that is both an initial object and a terminal object.
+
+All initial objects (respectively, terminal objects, and zero objects), if they exist, are isomorphic in $\mathcal{C}$.
