--- a/tex/category.tex
+++ b/tex/category.tex
@@ -25,10 +25,17 @@ Some examples of categories:
 
 \textbf{Remark}.  If $\hom(A,B)$ in the second condition above is not required to be a set (but a class), we usually call $\mathcal{C}$ a \emph{large category}.
 
-An {\em initial object} in a category $\mathcal{C}$ is an object $A$ in $\mathcal{C}$ such that, for every object $X$ in $\mathcal{C}$, there is exactly one morphism $A \longrightarrow X$.
+\subsubsection*{Initial and terminal objects}
+\input{tex/initialterminalobjects.tex}
 
-A {\em terminal object} in a category $\mathcal{C}$ is an object $B$ in $\mathcal{C}$ such that, for every object $X$ in $\mathcal{C}$, there is exactly one morphism $X \longrightarrow B$.
+\subsubsection*{Functors}
+\input{tex/functor.tex}
 
-A {\em zero object} in a category $\mathcal{C}$ is an object $0$ that is both an initial object and a terminal object.
+\subsubsection*{Natural transformations}
+\input{tex/naturaltransformations.tex}
 
-All initial objects (respectively, terminal objects, and zero objects), if they exist, are isomorphic in $\mathcal{C}$.
+\subsubsection*{Adjoint functors}
+\input{tex/adjointfunctors.tex}
+
+\subsubsection*{Exponential objects}
+\input{tex/exponentialobjects.tex}
