begin type-free section

--- a/tex/metabolism.tex
+++ b/tex/metabolism.tex
@@ -63,12 +63,12 @@ $$
 	A\ar[r]^-{f} & B.
 	}
 $$
-In general we can consider any case of $f \colon \prod_i S_i \rightarrow \prod_j P_j$ as being denoted by $f \colon A \rightarrow B$ for $A \cong \prod_i^N S_i$ and $B \cong \prod_j^M P_j$. An element $a \colon A$ then represents a tuple $(s_1, s_2, \ldots, s_N)$ that expresses a state of metabolic input substrates and likewise for the metabolic products $b \colon B$ representing $(p_1, p_2, \ldots, p_M)$.
+In general we can consider any case of $f \colon \prod_i S_i \rightarrow \prod_j P_j$ as being denoted by $f \colon A \rightarrow B$ for $A \cong \prod_i S_i$ and $B \cong \prod_j P_j$. An element $a \colon A$ then represents a tuple $(s_1, s_2, \ldots, s_N)$ that expresses a state of metabolic input substrates and likewise for the metabolic products $b \colon B$ representing $(p_1, p_2, \ldots, p_M)$.
 
 \begin{figure}
 \begin{center}
 \noindent\includegraphics[width=0.9\columnwidth]{fig/blockdiagtop.pdf}
 \end{center}
-\caption{An abstraction of metabolic networks that can be interpreted in terms of symmetric monoidal categories.}
+\caption{An abstraction of metabolic networks that can be interpreted in terms of symmetric monoidal categories and their associated string diagrams (see Materials and Methods).}
 \label{fig:metabolicstringdiag}
 \end{figure}
