--- a/plos_template.tex
+++ b/plos_template.tex
@@ -35,16 +35,16 @@
 \section*{Materials and Methods}
 \subsection*{Categories\todo{so far, this section is lifted from planetmath.org.}}
 \input{tex/intuition.tex}
-%\input{tex/category.tex}
+\input{tex/category.tex}
 %
-%\subsection*{Cartesian closed category}
-%\input{tex/cartesianclosedcat.tex}
+\subsection*{Cartesian closed category}
+\input{tex/cartesianclosedcat.tex}
 %
-%\subsection*{Monoidal categories}
-%\input{tex/monoidalcategory.tex}
+\subsection*{Monoidal categories}
+\input{tex/monoidalcategory.tex}
 %
-%\subsection*{Symmetric monoidal categories}
-%\input{tex/symmetricmonoidalcategory.tex}
+\subsection*{Symmetric monoidal categories}
+\input{tex/symmetricmonoidalcategory.tex}
 
 % Do NOT remove this, even if you are not including acknowledgments
 \section*{Acknowledgments}
